pics position and paraghaps spaces

--- a/contents/accessible/dont_just_publish_the_raw_data.tex
+++ b/contents/accessible/dont_just_publish_the_raw_data.tex
@@ -18,10 +18,10 @@ information to gain useful knowledge. \\
  
 In order to obtain this knowledge, the user must correctly interpret the data. It's not enough to know what the values and 
 units individually represent, but what they mean in the big picture. For that the user must already have expertise in the 
-area, or must engage in further research allowing them to understand the data that has been extracted.
+area, or must engage in further research allowing them to understand the data that has been extracted.\\
     
 In order to build a system that makes data accessible, it is essential to design a model to specify the
-information that we want to obtain. The design of a system will allow that, based on given values, provide some results.
+information that we want to obtain. The design of a system will allow that, based on given values, provide some results.\\
 
 For this it will be necessary to have a solid knowledge of the dataset that is needed, the values, their units and how they relate to each other.
 
@@ -34,7 +34,7 @@ on the subject. Design a model that provides the information we are looking for.
 
 Aire Guru aims to increase the awareness of the level of pollution that surrounds us. To do this, it uses a measure called
 the air quality index (AQI), specifically the European air quality index (EAQI).
-
+\newpage
 \begin{figure}[ht]
     \centering
     \includegraphics[width=10cm]{mapAireGuru}
