--- a/contents/accessible/make_your_data_available.tex
+++ b/contents/accessible/make_your_data_available.tex
@@ -16,7 +16,7 @@ Therefore, we can not say that data interfaces are commonly accessible in a usef
 
 \subsubsection*{Suggested strategies} 
 
-We must provide the information required by the user in an uncomplicated manner, in a format that is easy to read and interpret, and we must describe it in a way that is easy to understand and quick to digest..
+We must provide the information required by the user in an uncomplicated manner, in a format that is easy to read and interpret, and we must describe it in a way that is easy to understand and quick to digest..\\
 
 In order to collect the information which is relevant to the user, we will need to carry out processes such as extraction, transformation and
 data cleaning.
@@ -24,6 +24,7 @@ data cleaning.
 \subsubsection*{In the context of Aire Guru \ldots} 
 
 Our tool uses the air quality data provided by the city of Málaga in its open data portal.(https://datosabiertos.malaga.eu/)\\
+\newpage
 \begin{figure}[ht]
     \centering
    \subfigure[Main page]
@@ -43,7 +44,7 @@ Our tool uses the air quality data provided by the city of Málaga in its open d
     In this case, if we click on the link, data is displayed in a new tab. The use of software
     for translating the data is not strictly necessary, but we can see that the format (JSON) is not easily readable in human terms.
 
-Aire Guru (https:\\aire.guru) offers all the necessary information on a web platform which has been designed to facilitate human understanding.
+Aire Guru offers all the necessary information on a web platform which has been designed to facilitate human understanding.
 
 \subsubsection*{Evaluation}  
 
