--- a/contents/accessible/use_concepts_and_language_that_your_user_understands.tex
+++ b/contents/accessible/use_concepts_and_language_that_your_user_understands.tex
@@ -9,10 +9,10 @@ the meaning in a natural way.
 \subsubsection*{Suggested strategies} 
 
 Consider what type of representational format is most appropriate to the task. If it is not possible, we will provide de 
-resources needed to help the user to understand and place the information in context. 
+resources needed to help the user to understand and place the information in context. \\
 
 We should stady which type of graphs fits better to which kind of data,A graph may not necessarily be the 
-clearest way to represent information.
+clearest way to represent information.\\
 
 We should take into account the target audience, and how we can most effectively transmit information to them. 
 If we decide that a using graph is the best solution, we must consider carefully which type to use. For example, 
@@ -22,9 +22,9 @@ between sexes, we will use a pie chart.
 \subsubsection*{In the context of Aire Guru \ldots} 
 
 The Aire Guru tool presents the information in the native language of the city, using simple vocabulary and a 
-straightforward style.
+straightforward style.\\
 Colors and graphic resources are used as icons. In addition, a unified design structure to represent data has 
-been used over the whole site, giving the user a consistent visualization experience. 
+been used over the whole site, giving the user a consistent visualization experience. \\
 
 One of the objectives is to represent pollution by areas of the city, which is why a map has been used - the 
 obvious and familiar visual image of the different places in the city. This is a more legible format since the user
