--- a/contents/aire_guru/_section.tex
+++ b/contents/aire_guru/_section.tex
@@ -1,4 +1,3 @@
-\newpage
 \section{Aire Guru}
 
 Urban residents are surrounded by many sources of air pollution, and it is the direct cause of many different symptoms,
@@ -6,23 +5,27 @@ ranging from simple eye irritation
 to, in extreme cases, death. Particularly for high-risk groups like children and the elderly.
 The WHO (World Health Organization) estimates 4.2 million deaths
 (https://www.who.int/airpollution/ambient/en/) per year due to air pollution.
-Air pollution has a significant affect on people with asthma, cardiopathies, allergies, and neurological pathologies.
+Air pollution has a significant affect on people with asthma, cardiopathies, allergies, and neurological pathologies.\\
+
 
 Air pollution not only aggravates existing diseases, but can also be an initial cause of them, such as in the case of foetal brain
 damage (https://www.cronicabalear.es/2018/07/la-contaminacion-ambiental-causa-enfermedades-neurologicas-y-envejecimiento-del-cerebro)
-caused by the mother's exposure to air pollution.
+caused by the mother's exposure to air pollution.\\
+
 
 To be able to control the level of exposure we need to know the levels
 in the specific locations that we frequent, and the variation during specific times.
 To make this information as accessible as possible, it should be freely and publicly available, and the presentation
-must be simple enough to be understandable by the average citizen.
+must be simple enough to be understandable by the average citizen.\\
+
 
 We have created a tool - Aire Guru - which collects air pollution data periodically, stores it for historical use, 
 processes it to extract relevant information, personalizes it to engage the user with regard to their individual
 circumstance, visualizes it in an easy to understand format, and provides it online to facilitate its accessibility. Furthermore,
 descriptions of all the data and how it has been processed are also provided to raise public awareness of the value
 of this data. Aire Guru has been successfully tested, using the Air Quality data provided
-by the Málaga open data portal(https://datosabiertos.malaga.eu/) in the Spanish city of Málaga.
+by the Málaga open data portal(https://datosabiertos.malaga.eu/) in the Spanish city of Málaga.\\
+
 
 There are already many tools available, however they have various failings.
 
@@ -47,12 +50,12 @@ enough for the user to take control of their exposure. Such visualizations are n
 Our webtool (https://airquality.guru/), solves the deficiencies described above.
 
 Measurements are published hourly and come from measurement stations placed throughout the 
-city of Málaga, covering entire urban region at a granularity of $100m^2$
+city of Málaga, covering entire urban region at a granularity of $100m^2$\\
 
 The information is presented in a clear and simple manner, making it possible to see the most polluted regions,
 and allowing the user to make comparisons both geographically and historically. It provides personalised information, such as the most relevant 
 pollutants for a user's particular medical conditions, and can track
-the pollution they are exposed to both in real time and over a historical period, by linking with location data from their mobile device. 
+the pollution they are exposed to both in real time and over a historical period, by linking with location data from their mobile device. \\
 
 The system has been successfully tested with 14 subject in the Spanish city of Málaga. The survey showed a high degree of satisfaction, 
 particularly regarding the clarity and completeness of the the information and analysis.
@@ -68,12 +71,12 @@ THIS SHOULD BE INCORPORATED INTO A DESCRIPTION OF AIRE GURU
 
 The platforms provide a huge volume of data, since, as mentioned earlier, they collect as much data as possible.
 There will be multiple samples containing the specified set of fields. These field sets may be similar to each other but don't need to be identical.
-From this data, we need to select the relevant samples, and from these, the fields necessary to represent specific information.
+From this data, we need to select the relevant samples, and from these, the fields necessary to represent specific information.\\
 
 Below we can see examples. The first one is taken from the European open data portal
 (https://www.eea.europa.eu/data-and-maps/data/air-pollutant-concentrations-at-station/air-pollutant-concentrations-201) and the second from the North American open data portal
 (https://data.cityofnewyork.us/api/views/kku6-nxdu/rows.json?accessType=DOWNLOAD).
-
+\newpage
 \begin{figure}[ht]
     \centering
     \subfigure[EEUU Open Portal. Demographic Statistics By Zip Code]
@@ -96,6 +99,7 @@ subdocuments contains a set of data in key-value form.
 In the following figure we can see the beginning of the document downloaded on June 9, 2019
 (https://datosabiertos.malaga.eu/recursos/ambiente/calidadaire/calidadaire.json) \\
 
+\newpage
 \begin{figure}[ht]
     \centering
    \subfigure[First subdocument]{ \centering \includegraphics[width=4.75cm]{geoJsonAirQualityData1}}
@@ -107,7 +111,7 @@ In the following figure we can see the beginning of the document downloaded on J
     
     In this excerpt we can see the first two subdocuments. Each subdocument contains the coordinates of the air quality 
     measuring station, the date and time when the measurement was recorded, and the values of the measurements.
-    In the following figure we can find the description provided by the open data portal.
+    In the following figure we can find the description provided by the open data portal.\\
     
 \begin{figure}[ht]
     \centering
@@ -162,7 +166,7 @@ More than half of the respondents admit that they did not know the meaning of th
 using the tool, they now understand it.
 Regarding their interest about air quality, half of them indicated that they had never sought information about it,
 only two were previously well informed, and one of them marked the 'other' option and specified that using the application had aroused their interest.
-In addition, four of them indicated that, thanks to the tool, they have now discovered they have a medical condition that is affected by air quality.
+In addition, four of them indicated that, thanks to the tool, they have now discovered they have a medical condition that is affected by air quality.\\
 
 Among the test subjects, a greater awareness of pollution has been recognized, and they now show more interest in the
 air quality in the city and its possible effects on their health.
