--- a/contents/compelling/make_sure_your_data_is_reliable.tex
+++ b/contents/compelling/make_sure_your_data_is_reliable.tex
@@ -1,7 +1,7 @@
 \subsection{Make sure your data is reliable}
 
 It is essential that the credibility of the dataset be impeccable. The source of the data must be reliable.
-Usually, in the description of the data, a section must be included where the origin of the dataset is explained.
+Usually, in the description of the data, a section must be included where the origin of the dataset is explained.\\
 
 The quality of the dataset can be measured according to the following characteristics of the values of the fields: \\
  
