--- a/contents/compelling/your_site_should_look_good.tex
+++ b/contents/compelling/your_site_should_look_good.tex
@@ -1,12 +1,12 @@
 \subsection{Your site should look good}
 
 It is important that the information is attractive, eye-catching and with sparkle. This is not only important from a conceptual point of view, but also from a functional one. We saw this previously, where we considered the importance
-of good data presentation, using a structure that guides the user in a logical and orderly manner.
+of good data presentation, using a structure that guides the user in a logical and orderly manner.\\
 
 We want to grab the users attention from the outset. For this we propose the following desirable features for the tool- that it be fun, entertaining,
-modern, current, easy to use, high quality, attractive and beautiful.
+modern, current, easy to use, high quality, attractive and beautiful.\\
 
-Although some of these characteristics are subjective, there are techniques available to achieve these objectives.
+Although some of these characteristics are subjective, there are techniques available to achieve these objectives.\\
 
 Other more technical characteristics are: \\
 
@@ -19,7 +19,7 @@ more easily.\\
 \textbf{Details.} A label with different typology or other color may jarr the user's perception. Only use when
 we want to highlight something in particular! \\
 
-\textbf{Sena de identidad.} It is highly recommended to 'brand' ourselves, so that users can recognize us quickly. For this we can utilize a symbol, a combination of colors, a logo, etc.
+\textbf{Sena de identidad.} It is highly recommended to 'brand' ourselves, so that users can recognize us quickly. For this we can utilize a symbol, a combination of colors, a logo, etc.\\
 
 To be able to hook our users, gamification is currently widely used. This is where we give a gaming aspect to the representation of the data. The user tries it because it catches their attention, it's fun.
 Certainly, at some point the novelty wears off, but, even so, the user has learned to use the interface and now feels well-disposed to continue to use it.
@@ -33,9 +33,9 @@ to care of details and to present our identity.
 \subsubsection*{In the context of Aire Guru \ldots}
 
 As we commented previously the design has been based on Google's Material Design, using straight lines, differentiating individual sections by using rectangles and using colors that contrast the information from the background.
-The background color for the graphics is a neutral white. Only shades of blue, gray and white are used. In addition, we have chosen a font that is easy to read.
+The background color for the graphics is a neutral white. Only shades of blue, gray and white are used. In addition, we have chosen a font that is easy to read.\\
 
-The sections are arranged neatly and structured by using a header and a body.
+The sections are arranged neatly and structured by using a header and a body.\\
 
 The central page consists of a header, the body and a footer. Both the header and the footer are static,
 they are shown in all the pages and they contain all the information needed to navigate between pages.
