--- a/contents/preliminaries/understand_your_purpose.tex
+++ b/contents/preliminaries/understand_your_purpose.tex
@@ -4,15 +4,15 @@ Our mission aside from reaching the defined objective is to attract users.
 A user will seek us because are unique, because we offer something that
 nobody else is offering, because we provide something that they need.
 For the user to remain with us, we need to earn their trust We need them to values us, appreciate us, feel a connection with us.
-We have to cultivate the relationship, look after our clients and provide satisfaction.
+We have to cultivate the relationship, look after our clients and provide satisfaction.\\
 
 To achieve this satisfaction, we have to have a clear mission - what can we usefully offer that makes us different?
 We can consider the characteristics that other products do not have, such as more updated and accurate data,
 greater coverage of information or a functionality that does not exist up to now, for example, to use the
-information that we offer to solve a daily problem.
+information that we offer to solve a daily problem.\\
 
 Once our mission is defined, we face a series of problems; the user may not be aware that they need a feature that we provide. We have a double challenge, to offer it to users and
-to make them realize that it is really necessary, that it helps them in their routine or daily life.
+to make them realize that it is really necessary, that it helps them in their routine or daily life.\\
 
 This is where we can make use of the most appropriate marketing techniques to reach our users.
 We will have to conduct a study of our target audience, find out what type of advertising they consume and through which channels, so we can approach them in the most appropriate way. Todays market is in a fast paced state of continuous change,
@@ -30,7 +30,7 @@ adapts most suitably to our product.
 The mission of Aire Guru is to increase the awareness of the quality of the air.
 There are several problems regarding this issue, the first one is user ignorance. Users may not be
 aware of the levels of pollution to which they are exposed and may not even know how it pollution can harm them
-in the short or long term.
+in the short or long term.\\
 
 Aire Guru tries to alert them to how air quality influences us, in a way that everyone, independent of their cultural or educational level,
 can clearly understand. It aims to make the information, and what that information means, available to everyone. We show how harmful it is to live in a highly polluted area and what the most common sources of pollution
