--- a/contents/accessible/remove_all_barriers_to_access.tex
+++ b/contents/accessible/remove_all_barriers_to_access.tex
@@ -27,10 +27,10 @@ We must not make the user perform complicated steps, or require them to add extr
 
 Malaga's air quality dataset is updated every hour, Aire Guru automates the process of collecting the
 data through a CRON job that executes a script implemented in JavaScript periodically. This reads the data from the url, processes it,
-cleans and stores it in a MongoDB database. That is to say, Aire Guru implements all the necessary collection processes.
+cleans and stores it in a MongoDB database. That is to say, Aire Guru implements all the necessary collection processes.\\
 
 Thanks to this infrastructure, the user is able to visualize the evolution of pollutants since 2018. The user can also track their personal exposure
- to these pollutants over the same period of time.
+ to these pollutants over the same period of time.\\
 
 In addition, this automation allows the user to visualize the pollution in the city of Málaga in real time, and see specifically the location where he is 
 occurring. \\
@@ -51,7 +51,7 @@ The data to the users through a web interface. \\
 
 To enable access by the majority of the population, Aire Guru is available at the web addresses https://www.aire.guru and https://www.airquality.guru.
 We use SSL that guarantees the encryption of data through the network and ensure the user has access to it since, as more and more browsers try to protect 
-users by only showing pages that use a secure method.
+users by only showing pages that use a secure method.\\
 
 As we commented previously, all users can see the basic information without having to provide any data or identify themselves, without the need to
 perform downloads or installations. Today, almost everyone is familiar with web browsing and if we do not force the user to realize extra taks, as 
