--- a/contents/compelling/show_the_user_that_you_are_trustworthy.tex
+++ b/contents/compelling/show_the_user_that_you_are_trustworthy.tex
@@ -17,15 +17,16 @@ Give the user the possibility to delete their data if they wish.
 In our case, security is high, since for our main purpose, personal history
 of exposure to contamination, it is not essential to collect the user's details.
 SSL has been used to achieve a level of competent security, which guarantees the encryption of
-the information sent through the network.
+the information sent through the network.\\
+
 For the identification of the user a secure and proven API has been used. We use the identification
 that Firebase provides. This API provides us with an identifier, which may be encrypted.
 We have of course used encryption. When the data reaches our database,
 we check the user and then we re-encrypt the user with our own salt to
-avoid linking firebase with our database.
+avoid linking firebase with our database.\\
 
 We never store the users exact location, only the polygon where he is.
-We have also implemented a time limit, which allows us to have the necessary precision to show exposure to pollutants, but doesn't allow user tracking.
+We have also implemented a time limit, which allows us to have the necessary precision to show exposure to pollutants, but doesn't allow user tracking.\\
 
 As per the code of good practice, never collect the user's position without their permission.
 To get this permission, one should require an explicit action. In our case, the user will have to select "Mi ubicacion" (My location) and accept 
