--- a/contents/preliminaries/know_your_user.tex
+++ b/contents/preliminaries/know_your_user.tex
@@ -4,13 +4,13 @@ A large part of the objective outlined in section 3.1, design, is defined by the
 to the user. Asssisting the user, (our client), is our primary purpose. \\
 
 We must be aware of the needs of users in order to meet their demands, as well as being aware of deficiencies in the market, so we can cover any 'holes'.
-We should cater for all audiences equally 
+We should cater for all audiences equally.\\
 
 Whether our target audience is unique, that is, take all types of users equally, considering the
-average user, as for a characteristic user, we should know the homogeneous characteristics of our group.
+average user, as for a characteristic user, we should know the homogeneous characteristics of our group.\\
 
 Therefore we need a current study on the psychological, social and economic level of the target group, to ascertain not only
-their needs, but also their wishes.
+their needs, but also their wishes.\\
 
 Once the users have access to the data we provide, it is important to have a feedback process.
 It would be ideal to be able to perform an analysis of user behavior, to see their guidelines regarding the data obtained.
@@ -18,7 +18,7 @@ It would be ideal to be able to perform an analysis of user behavior, to see the
 \subsubsection*{Suggested strategies} 
 
 Define what type of user is intended. Study both their characteristics and the situation of the
-market.
+market.\\
 Use a mechanism that helps us obtain feedback, either by a system of points, test or
 an automatic mechanism that allows tracking the behavior of the user. We can also choose the combination of both
 options.
