--- a/contents/relevant/personalize_the_data_for_each_user.tex
+++ b/contents/relevant/personalize_the_data_for_each_user.tex
@@ -3,11 +3,11 @@
 So far we have seen different parameters to evaluate the relevant data at a general level. In this section, we will focus on the specific personal level.
 Each user has a unique personal situation, so we have to find a way to adapt and personalize the data, to provide both general and individually specific information.
 For example, if I was the user, my defining characteristics such as where I live,
-my health status, family situation, etc can help us.
+my health status, family situation, etc can help us.\\
 
 In many cases, we will not be able to fully customize, but we can look for common points in subgroups of
 user. From this point we have to study the different cases that can be given and make a selection of those that are
-more common.
+more common.\\
 
 The key question we need to consider in order to be able to personalize the information, is how can the data be related at a specific time, in a specific place to meet specific needs of the
 user as an individual.
@@ -38,11 +38,12 @@ We should study how the data will help the user or user-subgroups and from this 
   \caption{Medical Condition Filter}
 \end{figure}
 
-Here we see, in each case, for each medical condition, a subset of pollutants which most influence each condition is shown.
+Here we see, in each case, for each medical condition, a subset of pollutants which most influence each condition is shown.\\
   
 The answer to the key question, how can the data be related to a specific time and place, leads us to
 implementation of a personal history of exposure to pollution. That is, to know at all times what pollution
-a user is subject to and where the exposure happened.
+a user is subject to and where the exposure happened.\\
+
 For this, it is essential to read the user's position. By matching the users location and the coordinates provided by the original dataset, we can find the level of exposure to pollutants.
 If the user gives us his permission to store this data, we can show them their personalized history.
 
@@ -64,6 +65,7 @@ If the user gives us his permission to store this data, we can show them their p
   This functionality is Aire Guru most powerful tool. Other platforms require user-level measurement devices, ie the user must carry
   a portable measurement station that monitors the different pollutants. \\
 
+  \newpage
   \begin{figure}[ht]
       \centering
       \includegraphics[width=8cm]{importedDataDecember}
@@ -72,7 +74,7 @@ If the user gives us his permission to store this data, we can show them their p
 
 It is possible that the user may have started to use the application and not yet have any available data.
 To deal with this, we offer the possibility of importing the Google location history, enabling the user to be able to visualize
-exposure to pollution since the beginning of 2018 even if they have not been using the tool for  all of that period.
+exposure to pollution since the beginning of 2018 even if they have not been using the tool for  all of that period.\\
 
 We will have to take into account that in order to read the user's position and store their data, we must
 have their explicit permission. We must implement mechanisms that provide us with the necessary security to safeguard our users data. The measures taken will be explained later.
